@@ -494,6 +494,37 @@ sub return : Callback(priority => 6) {
     }
 }
 
+sub cancel_return : Callback(priority => 6) {
+    my $self = shift;
+    my $widget = $self->class_key;
+    my $version_view = get_state_data($widget, 'version_view');
+    my $media = get_state_data($widget, 'media');
+
+    my $state = get_state_name($widget);
+    my $url;
+    my $return = get_state_data($widget, 'return') || '';
+    my $wid = $media->get_workflow_id;
+
+    if ($return eq 'search') {
+        $wid = get_state_data('workflow', 'work_id') || $wid;
+        $url = $SEARCH_URL . $wid . '/';
+    } elsif ($return eq 'active') {
+        $url = $ACTIVE_URL . $wid;
+    } elsif ($return =~ /\d+/) {
+        $url = $DESK_URL . $wid . '/' . $return . '/';
+    } else {
+        $url = '/';
+    }
+
+    # Clear the state and send 'em home.
+    $self->clear_my_state;
+    if (my $prev = get_state_data('_profile_return')) {
+        $self->return_to_other($prev);
+    } else {
+        $self->set_redirect($url);
+    }
+}
+
 ################################################################################
 
 sub create : Callback {
