@@ -378,6 +378,33 @@ sub return : Callback(priority => 6) {
     }
 }
 
+sub cancel_return : Callback(priority => 6) {
+    my $self = shift;
+    my $widget = $self->class_key;
+    my $version_view = get_state_data($widget, 'version_view');
+
+    my $story = get_state_data($widget, 'story');
+
+    my $url;
+    my $return = get_state_data($widget, 'return') || '';
+    my $wid = $story->get_workflow_id;
+
+    if ($return eq 'search') {
+        $wid = get_state_data('workflow', 'work_id') || $wid;
+        $url = $SEARCH_URL . $wid . '/';
+    } elsif ($return eq 'active') {
+        $url = $ACTIVE_URL . $wid;
+    } elsif ($return =~ /\d+/) {
+        $url = $DESK_URL . $wid . '/' . $return . '/';
+    } else {
+        $url = '/';
+    }
+
+    # Clear the state and send 'em home.
+    $self->clear_my_state;
+    $self->set_redirect($url);
+}
+
 sub create : Callback {
     my $self = shift;
     my $widget = $self->class_key;
